--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -8,23 +8,23 @@
 
 .Procedure
 
-. Download the latest installer .tar file from link:{PlatformDownloadUrl}[access.redhat.com]. This can be done directly within the {RHEL} host, which saves time.
+. Download the latest installer .tar file from the link:{PlatformDownloadUrl}[{PlatformNameShort} download page]. 
 
-. If you have downloaded the .tar file and optional manifest .zip file onto your laptop, copy them onto your {RHEL} host.
+. Copy the installer .tar file and the optional manifest .zip file onto your {RHEL} host.
+
+. Decide where you want the installer to reside on the file system. Installation related files will be created under this location and require at least 10 GB for the initial installation.
+
+. Unpack the installer .tar file into your installation directory, and go to the unpacked directory. 
 +
-Decide where you want the installation program to reside on the filesystem. Installation related files will be created under this location and require at least 10Gb for the initial installation.
-+
-. Unpack the installation program .tar file into your installation directory, and navigate to the unpacked directory. 
-+
-.. online installer
+.. For the online installer:
 +
 ----
 $ tar xfvz ansible-automation-platform-containerized-setup-<version>.tar.gz
 ----
 +
-.. bundled installer
+.. For the bundled installer:
 +
 ----
-$ tar xfvz ansible-automation-platform-containerized-setup-bundle-<version>-<arch name>.tar.gz
+$ tar xfvz ansible-automation-platform-containerized-setup-bundle-<version>-<arch_name>.tar.gz
 ----
 
