--- a/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
+++ b/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
@@ -2,41 +2,35 @@
 
 [id="accessing-gateway_{context}"]
 
-= Accessing platform gateway
+= Accessing {PlatformNameShort}
 
 [role="_abstract"]
 
 
-After the installation completes, the default protocol and ports used for platform gateway are 80 (http) and 443 (https).
+After the installation completes, the default protocol and ports used for {PlatformNameShort} are 80 (HTTP) and 443 (HTTPS).
 
 You can customize the ports with the following variables:
 
 ----
 gateway_nginx_http_port: 8500
-
 gateway_nginx_https_port: 8501
 ----
 
-If you want to disable https, set `gateway_nginx_disable_https` to `true`:
+If you want to disable HTTPS, set `gateway_nginx_disable_https` to `true`:
 
 ----
 gateway_nginx_disable_https: true
 ----
 
-[NOTE]
-====
-Consult the *README.md* for further details. Leave the defaults unless you need to change them due to port conflicts or other factors.
-====
+.Accessing the platform UI
 
-.Accessing platform gateway UI
-
-The platform gateway UI is available by default at:
+The platform UI is available by default at:
 
 ----
 https://<gateway-node>:443
 ----
 
-Log in as the admin user with the password you created for *gateway_admin_password*.
+Log in as the admin user with the password you created for `gateway_admin_password`.
 
 // Michelle: Removing additional component UI references as platform gateway UI will be used going forward - AAP-18760
 // .Accessing {ControllerName} UI
