--- a/downstream/modules/platform/ref-using-custom-tls-certificates.adoc
+++ b/downstream/modules/platform/ref-using-custom-tls-certificates.adoc
@@ -40,7 +40,7 @@ eda_tls_cert=/full/path/to/tls/certificate
 eda_tls_key=/full/path/to/tls/key
 ----
 
-* Postgresql
+* PostgreSQL
 ----
 postgresql_tls_cert=/full/path/to/tls/certificate
 postgresql_tls_key=/full/path/to/tls/key
