--- a/downstream/modules/platform/proc-using-postinstall.adoc
+++ b/downstream/modules/platform/proc-using-postinstall.adoc
@@ -2,55 +2,53 @@
 
 [id="using-postinstall_{context}"]
 
-= Using postinstall feature of containerized {PlatformNameShort}
+= Using the postinstall feature of containerized {PlatformNameShort}
 
 [role="_abstract"]
 
 
-Use the postinstaller feature of containerized {PlatformNameShort} to define and load the configuration during the initial installation. This uses a configuration-as-code approach, where you simply define your configuration to be loaded as simple YAML files. 
+You can use the optional postinstall feature of containerized {PlatformNameShort} to define and load the configuration during the initial installation. This uses a configuration-as-code approach, where you simply define your configuration to be loaded as YAML files. 
 
-. To use this optional feature, you need to uncomment the following vars in the inventory file:
+.Prerequisites
+* An {PlatformNameShort} license for this feature that is on the local filesystem so it can be automatically loaded from the inventory file.
+
+
+.Procedure
+. The postinstall feature is disabled by default. To use the postinstaller, uncomment the following variables in your inventory file:
 +
 ----
 controller_postinstall=true
+controller_license_file=<full_path_to_your_manifest_zip_file>
 ----
 +
-
-. The default is false, so you need to enable this to activate the postinstaller. You need a {PlatformNameShort} license for this feature that must reside on the local filesystem so it can be automatically loaded:
-+
-----
-controller_license_file=/full_path_to/manifest_file.zip
-----
-+
-
 . You can pull your configuration-as-code from a Git based repository. To do this, set the following variables to dictate where you pull the content from and where to store it for upload to the {PlatformNameShort} controller:
 +
 ----
-controller_postinstall_repo_url=https://your_cac_scm_repo
-controller_postinstall_dir=/full_path_to_where_you_want_the pulled_content_to_reside
+controller_postinstall_repo_url=<url_to_your_config-as-code_git_repository>
+controller_postinstall_dir=<full_path_to_your_config-as-code_directory>
+controller_postinstall_repo_ref=main
 ----
 +
-
-. The controller_postinstall_repo_url variable can be used to define the postinstall repository URL which must include authentication information.
+. The `controller_postinstall_repo_url` variable can defines the postinstall repository URL which must include authentication information.
 
 +
 ----
-http(s)://<host>/<repo>.git (public repository without http(s) authentication)
-http(s)://<user>:<password>@<host>:<repo>.git (private repository with http(s) authentication)
-git@<host>:<repo>.git (public/private repository with ssh authentication)
+http(s)://<host>/<repo>.git (public repository without HTTP(S) authentication)
+http(s)://<user>:<password>@<host>:<repo>.git (private repository with HTTP(S) authentication)
+git@<host>:<repo>.git (public or private repository with SSH authentication)
 ----
 +
 
 [NOTE]
 ====
-When using ssh based authentication, the installer does not configure anything for you, so you must configure everything on the installer node.
+When using SSH based authentication, the installer does not configure anything for you, so you must configure everything on the installer node.
 ====
 
-Definition files use the link:https://console.redhat.com/ansible/automation-hub/namespaces/infra/[infra certified collections]. The link:https://console.redhat.com/ansible/automation-hub/repo/validated/infra/controller_configuration/[controller_configuration] collection is preinstalled as part of the installation and uses the installation controller credentials you supply in the inventory file for access into the {PlatformNameShort} controller. You simply need to give the YAML configuration files. 
+Definition files that are used by Ansible Builder to create automation execution environment images use the link:https://console.redhat.com/ansible/automation-hub/namespaces/infra/[infra certified collections]. The link:https://console.redhat.com/ansible/automation-hub/repo/validated/infra/controller_configuration/[controller_configuration] collection is preinstalled as part of the installation and uses the installation controller credentials you supply in the inventory file for access into the {PlatformNameShort} controller. You simply need to give the YAML configuration files. 
 
-You can setup {PlatformNameShort} configuration attributes such as credentials, LDAP settings, users and teams, organizations, projects, inventories and hosts, job and workflow templates.
+You can set up {PlatformNameShort} configuration attributes such as credentials, LDAP settings, users and teams, organizations, projects, inventories and hosts, job and workflow templates.
 
-The following example shows a sample *your-config.yml* file defining and loading controller job templates. The example demonstrates a simple change to the preloaded demo example provided with an {PlatformNameShort} installation.
+The following example shows a sample `your-config.yml` file defining and loading controller job templates. The example demonstrates a simple change to the  example provided with an {PlatformNameShort} installation.
 
 ----
 /full_path_to_your_configuration_as_code/
