--- a/downstream/modules/platform/ref-enabling-automation-hub-collection-and-container-signing.adoc
+++ b/downstream/modules/platform/ref-enabling-automation-hub-collection-and-container-signing.adoc
@@ -11,14 +11,14 @@
 
 ----
 hub_collection_signing=true
-hub_collection_signing_key=/full/path/to/collections/gpg/key
+hub_collection_signing_key=<full_path_to_collections_gpg_key>
 hub_container_signing=true
-hub_container_signing_key=/full/path/to/containers/gpg/key
+hub_container_signing_key=<full_path_to_containers_gpg_key>
 ----
 
 When the GPG key is protected by a passphrase, you must provide the passphrase.
 
 ----
-hub_collection_signing_pass=<collections gpg key passphrase>
-hub_container_signing_pass=<containers gpg key passphrase>
+hub_collection_signing_pass=<collections_gpg_key_passphrase>
+hub_container_signing_pass=<containers_gpg_key_passphrase>
 ----
