updates based on peer review feedback

--- a/downstream/modules/platform/proc-installing-ansible-core.adoc
+++ b/downstream/modules/platform/proc-installing-ansible-core.adoc
@@ -11,7 +11,7 @@
 sudo dnf install -y ansible-core
 ----
 +
-. Optionally you can install additional utilities that may be useful for troubleshooting purposes, for example `wget`, `git`, `rsync`, and `vim`:
+. Optionally, you can install additional utilities that can be useful for troubleshooting purposes, for example `wget`, `git`, `rsync`, and `vim`:
 +
 ----
 sudo dnf install -y wget git rsync vim
