--- a/downstream/modules/platform/proc-uninstalling-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-uninstalling-containerized-aap.adoc
@@ -11,7 +11,7 @@ To uninstall a containerized deployment, run the `uninstall.yml` playbook:
 $ ansible-playbook -i inventory ansible.containerized_installer.uninstall
 ----
 
-This will stop all systemd units and containers and then delete all resources used by the containerized installer such as:
+This stops all systemd units and containers and then delete all resources used by the containerized installer such as:
 
 * config and data directories and files
 * systemd unit files
