--- a/downstream/modules/platform/proc-using-postinstall.adoc
+++ b/downstream/modules/platform/proc-using-postinstall.adoc
@@ -29,7 +29,7 @@ controller_postinstall_dir=<full_path_to_your_config-as-code_directory>
 controller_postinstall_repo_ref=main
 ----
 +
-. The `controller_postinstall_repo_url` variable can defines the postinstall repository URL which must include authentication information.
+. The `controller_postinstall_repo_url` variable can define the postinstall repository URL which must include authentication information.
 
 +
 ----
