--- a/downstream/modules/platform/ref-adding-execution-nodes.adoc
+++ b/downstream/modules/platform/ref-adding-execution-nodes.adoc
@@ -24,7 +24,7 @@ receptor_protocol=tcp
 receptor_type=hop
 ----
 
-The `receptor_type` value can be either `execution` or `hop`, while the `receptor_protocol` is either `tcp` or `udp`. By default, the nodes in the `execution_nodes` group will be added as peers for the controller node. However, you can change the peers configuration by using the `receptor_peers` variable.
+The `receptor_type` value can be either `execution` or `hop`, while the `receptor_protocol` is either `tcp` or `udp`. By default, the nodes in the `execution_nodes` group are added as peers for the controller node. However, you can change the peers configuration by using the `receptor_peers` variable.
 ----
 [execution_nodes]
 fqdn_of_your_execution_host
