updates based on peer review feedback

--- a/downstream/modules/platform/proc-downloading-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-downloading-containerized-aap.adoc
@@ -12,7 +12,7 @@
 
 . Copy the installer .tar file and the optional manifest .zip file onto your {RHEL} host.
 
-. Decide where you want the installer to reside on the file system. Installation related files will are created under this location and require at least 10 GB for the initial installation.
+. Decide where you want the installer to reside on the file system. Installation related files are created under this location and require at least 10 GB for the initial installation.
 
 . Unpack the installer .tar file into your installation directory, and go to the unpacked directory. 
 +
