AAP-28228-A updated OCP topologies

--- a/downstream/modules/topologies/ref-ocp-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-b-env-a.adoc
@@ -74,15 +74,9 @@ a|
 | S3 storage | HTTPS only accessible through AWS Role assigned to {HubName} SA at runtime using AWS Pod Identity
 |====
 
-== Example custom resource file 
+// == Example custom resource file 
 
-Use the following example custom resource (CR) to add your {PlatformNameShort} instance to your project:
-
-====
-----
-
-----
-====
+// Use the following example custom resource (CR) to add your {PlatformNameShort} instance to your project:
 
 == Nonfunctional requirements
 
