AAP-28228-A updated OCP topologies

--- a/downstream/modules/topologies/ref-ocp-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-a-env-a.adoc
@@ -47,7 +47,7 @@ a|
 * num_of_control_nodes: 1
 * num_of_worker_nodes: 1 
 * VM Configuration:
-** OS: Red Hat Enterprise Linux 9.2 or later 64-bit (x86)
+** OS: {RHEL} 9.2 or later 64-bit (x86)
 **  CPU: 16 
 **  RAM: 32 GB
 **  Disk: 128 GB
