--- a/downstream/modules/topologies/ref-ocp-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-b-env-a.adoc
@@ -100,7 +100,7 @@ OpenShift manages storage distinctly from VMs. This impacts how {HubName} stores
 |====
 | Port number | Protocol | Service | Source | Destination
 | 5432 | TCP | PostgreSQL | OCP cluster | External database service
-| 6379 | TCP | Redis | OCP cluster | Externa redis service
+| 6379 | TCP | Redis | OCP cluster | External redis service
 | 443 | HTTPS | Object storage | OCP cluster | External object storage service
 | 27199 | TCP | Receptor | OCP cluster | Execution node
 | 27199 | TCP | Receptor | OCP cluster | Hop node
