changed Galaxy to {Galaxy}
used attribute instead

--- a/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
+++ b/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
@@ -1,6 +1,6 @@
 [id="proc-central-auth-dependencies"]
 
-= Install the collections and dependencies for Ansible Galaxy
+= Install the collections and dependencies for {Galaxy}
 
 .Prerequisites
 
@@ -10,7 +10,7 @@
 
 .Procedure
 
-. Install the collection for Ansible Galaxy:
+. Install the collection for {Galaxy}:
 +
 [listing]
 $ ansible-galaxy collection install middleware_automation.keycloak
@@ -31,7 +31,7 @@ This collection has two dependencies that you might also want to install dependi
 
 .Verification 
 
-. Run the command to display the collection list for Galaxy:
+. Run the command to display the collection list for {Galaxy}:
 +
 [listing]
 # ansible-galaxy collection list
