--- a/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
+++ b/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
@@ -4,7 +4,7 @@
 
 .Prerequisites
 
-. A supported version of either the https://access.redhat.com/product-life-cycles[Red Hat Enterprise Linux] or the https://docs.fedoraproject.org/en-US/releases/[Fedora] operating system
+. A supported version of either the link:https://access.redhat.com/product-life-cycles[{RHEL}] or the link:https://docs.fedoraproject.org/en-US/releases/[Fedora] operating system
 
 . A supported version of https://access.redhat.com/support/policy/updates/ansible-automation-platform[Ansible]
 
