--- a/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
+++ b/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
@@ -6,7 +6,7 @@
 
 . A supported version of either the link:https://access.redhat.com/product-life-cycles[{RHEL}] or the link:https://docs.fedoraproject.org/en-US/releases/[Fedora] operating system
 
-. A supported version of https://access.redhat.com/support/policy/updates/ansible-automation-platform[Ansible]
+. A supported version of https://access.redhat.com/support/policy/updates/ansible-automation-platform[{PlatformNameShort}]
 
 .Procedure
 
