--- a/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
+++ b/downstream/modules/platform/proc-central-auth-install-dependencies.adoc
@@ -19,12 +19,12 @@ $ ansible-galaxy collection install middleware_automation.keycloak
 ====
 This collection has two dependencies that you might also want to install depending on your network configuration. 
 
-`middleware_automation.redhat_csp_download` enables Ansible to connect to the Customer Portal to download Red Hat’s single sign-on technology.
+`middleware_automation.redhat_csp_download` enables {PlatformNameShort} to connect to the Customer Portal to download Red Hat’s single sign-on technology.
 
 `middleware_automation.wildfly` enables Keycloak to run on top of the Wildfly application server including Red Hat JBoss, the version of Wildfly officially supported by Red Hat.
 ====
 
-. Depending on your configuration, you might also want to add some Python dependencies containing libraries Ansible requires to use:
+. Depending on your configuration, you might also want to add some Python dependencies containing libraries used by {PlatformNameShort}: requires to use:
 +
 [listing]
 # pip 3 install xml jmespath
