added attributes over using names, one file name that needed backticks

--- a/downstream/modules/platform/proc-central-auth-install-keycloak.adoc
+++ b/downstream/modules/platform/proc-central-auth-install-keycloak.adoc
@@ -32,7 +32,7 @@ Both user and group account names are keycloak by default.
     - keycloak
 
 
-The configuration adds Ansible’s collection for Keycloak to the list the playbook uses, and the associated middleware_automation.keycloak.keycloak.
+The configuration adds {PlatformNameShort}'s collection for Keycloak to the list the playbook uses, and the associated `middleware_automation.keycloak.keycloak`.
 
 [NOTE]
 ====
@@ -98,7 +98,7 @@ Example 1. Configuring single sign-on for use with Ansible in the same playbook
 ====
 The playbook in Example 1 is the only playbook being used in this procedure. The following code blocks contain text from the same playbook. As a result, you are only modifying variables from one example. The examples following this note are truncated for findability and ease of understanding.
 
-In the Example 1, there are also no sources for authentication being used. This makes it easier to test your configuration before you deploy it. However, Red Hat recommends the use of LDAP as the authentication application.
+In Example 1, there are also no sources for authentication being used. This makes it easier to test your configuration before you deploy it. However, Red Hat recommends the use of LDAP as the authentication application.
 ====
 
 When you have configured single sign-on, there are several variables within the code provided that must be defined and are left blank. They must be defined before the playbook can work automatically.
