Update topologies based on feedback
- Update doc title to "Tested" instead of "Supported"
- Feedback from peer review of KCS articles

Create a document for supported topologies

https://issues.redhat.com/browse/AAP-28228

--- a/downstream/assemblies/topologies/assembly-container-topologies.adoc
+++ b/downstream/assemblies/topologies/assembly-container-topologies.adoc
@@ -1,6 +1,6 @@
 [id="container-topologies"]
 
-= Container supported topologies
+= Container topologies
 
 The containerized installer deploys {PlatformNameShort} on {RHEL} by using Podman which runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
 
