--- a/downstream/modules/topologies/ref-cont-a-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-a-env-a.adoc
@@ -1,11 +1,11 @@
 [id="cont-a-env-a"]
 = Container growth topology
 
-The growth topology is intended for organizations that do not require {PlatformNameShort} to be deployed with redundancy or higher compute for large volumes of automation.
+The growth topology is intended for organizations that do not require {PlatformNameShort} {PlatformVers} to be deployed with redundancy or higher compute for large volumes of automation.
 
 == Infrastructure topology
 
-Each VM has been tested with the following component requirements: 16 GB RAM, 4 CPU, 60 GB local disk, and 3000 IOPS. Resources, such as storage, can be increased based on the needs of the deployment.
+A single VM has been tested with the following component requirements: 16 GB RAM, 4 CPUs, 60 GB local disk, and 3000 IOPS. Resources, such as storage, can be increased based on the needs of the deployment.
 
 .Infrastructure topology
 [options="header"]
@@ -34,7 +34,7 @@ a|
 * Valid {RHEL} subscription (to consume the BaseOS and AppStream repositories)
 | Operating system | {RHEL} 9.2 or later 64-bit (x86_64)
 | Ansible-core | Ansible-core version 2.15 or later
-| Browser | A currently supported version of Mozilla Firefox or Google Chrome.
+| Browser | A currently supported version of Mozilla Firefox or Google Chrome
 | Database | PostgreSQL version 15
 |====
 
