--- a/downstream/modules/topologies/ref-cont-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-cont-b-env-a.adoc
@@ -5,12 +5,12 @@ The enterprise topology is intended for organizations that require {PlatformName
 
 == Infrastructure topology
 
-Each VM has been tested with the following component requirements: 16 GB RAM, 4 CPU, 60 GB local disk, and 3000 IOPS. 
+Each VM has been tested with the following component requirements: 16 GB RAM, 4 CPUs, 60 GB local disk, and 3000 IOPS. 
 
 .Infrastructure topology
 [options="header"]
 |====
-| VM count | Purpose | Example VM names
+| VM count | Purpose | Example VM group names
 | 2 | Platform gateway with Redis | automationgateway 
 | 2 | {ControllerNameStart} | automationcontroller
 | 2 | {PrivateHubNameStart} with Redis | automationhub
