--- a/downstream/titles/topologies/master.adoc
+++ b/downstream/titles/topologies/master.adoc
@@ -5,19 +5,20 @@ include::attributes/attributes.adoc[]
 
 // Book Title
 
-= Supported deployment models for Ansible Automation Platform
+= Tested deployment models for Ansible Automation Platform
 
 include::{Boilerplate}[]
 
 include::topologies/assembly-overview-supported-deployment-models.adoc[leveloffset=+1]
 
-//RPM supported topologies
+//RPM topologies
 include::topologies/assembly-rpm-topologies.adoc[leveloffset=+1]
 
-//Container supported topologies 
+//Container topologies 
 include::topologies/assembly-container-topologies.adoc[leveloffset=+1]
 
-//Operator supported topologies
+//Operator topologies
 include::topologies/assembly-ocp-topologies.adoc[leveloffset=+1]
 
 //Automation mesh nodes 
+include::topologies/topologies/ref-mesh-nodes.adoc[leveloffset=+1]
