--- a/downstream/assemblies/topologies/assembly-overview-supported-deployment-models.adoc
+++ b/downstream/assemblies/topologies/assembly-overview-supported-deployment-models.adoc
@@ -1,6 +1,6 @@
 [id="overview-supported-deployment-models"]
 
-= Overview of supported deployment models
+= Overview of tested deployment models
 
 Red Hat tests {PlatformNameShort} {PlatformVers} with a defined set of topologies to give you opinionated deployment options. While it is possible to install the {PlatformNameShort} on different infrastructure topologies and with different environment configurations, Red Hat provides full support for the topologies outlined in this document.
 
@@ -12,7 +12,7 @@ The following table outlines the different ways to install or deploy {PlatformNa
 .{PlatformNameShort} installation and deployment models
 [options="header"]
 |====
-| Mode | Infrastructure | Description | Supported topologies
+| Mode | Infrastructure | Description | Tested topologies
 | RPM | Virtual machines and bare metal | The RPM installer deploys {PlatformNameShort} on {RHEL} by using RPMs to install the platform on host machines. Customers manage the product and infrastructure lifecycle.
 a| 
 * RPM enterprise topology
@@ -22,6 +22,7 @@ a|
 | Virtual machines and bare metal
 | The containerized installer deploys {PlatformNameShort} on {RHEL} by using Podman which runs the platform in containers on host machines. Customers manage the product and infrastructure lifecycle.
 a| 
+* Container growth topology
 * Container enterprise topology
 
 | Operator
