--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -367,4 +367,4 @@
 :TitleDevelopAutomationContent: Developing automation content
 //
 // titles/topologies
-:TitleTopologies: Supported deployment models for Ansible Automation Platform
+:TitleTopologies: Tested deployment models for Ansible Automation Platform
